Bug 109242 - FILESAVE: Button Label still align on the left ( steps in comment 3 )
Summary: FILESAVE: Button Label still align on the left ( steps in comment 3 )
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0 target:5.4.1
Keywords: bibisected, bisected, regression
: 109321 110444 110458 111395 112154 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-07-20 20:16 UTC by ThierryT
Modified: 2017-09-10 16:34 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Label alignment not correct (10.94 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-07-20 20:16 UTC, ThierryT
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ThierryT 2017-07-20 20:16:58 UTC
Created attachment 134753 [details]
Label alignment not correct

When you insert in a sheet a button, the label is still aligned on the left when you reopen your file.

- Create a button
- Define the alignment of the label in the middle or in the right of the button
- Save your file
- Reopen your file

Version of LO
Version: 5.4.0.2 (x64)
Build ID: 2b906d450a44f2bbe506dcd22c51b3fa11dc65fd
Threads CPU : 4; OS : Windows 6.29; UI Render : par défaut; 
Locale : fr-FR (fr_FR); Calc: group
Comment 1 Xisco Faulí 2017-07-21 09:54:34 UTC
Confirmed in

Version: 6.0.0.0.alpha0+
Build ID: bde72cdae1e7e001d5089c5284672c976b8e43df
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)
Comment 2 Xisco Faulí 2017-07-21 10:20:35 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2017-03-30 13:47:26 (GMT)
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2017-03-31 06:59:31 (GMT)
commit dcffc21805828ddff7de1282f3d40ffdf3fac38d (patch)
tree 1b4e81850b3fcd42cee470a18413745732c36c4a
parent 7fca8e61ce992e9dc6f900b77142a123c0c10b6d (diff)
use actual UNO enums in svx

Bisected with bibisect-linux-64-5.4

Adding Cc: to Noel Grandin
Comment 3 Xisco Faulí 2017-07-21 10:23:02 UTC
Steps to reproduce:
1. Open attached document
2. Go to View - Toolbars- Form Controls
3. In the new toolbar, click on Design Mode icon and select the button
4. Right click - Controls
5. Change Aligment to Center.
6. Save the file.
7. Open again the file.
Comment 4 Jacques Guilleron 2017-07-21 10:54:22 UTC
Hi Thierry, Xisco,

I reproduce using
LO  5.4.0.1 Build ID: 962a9c4e2f56d1dbdd354b1becda28edd471f4f2
Threads CPU : 2; OS : Windows 6.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR); Calc: CL
Not with
LO 5.3.3.2 Build ID: 3d9a8b4b4e538a85e0782bd6c2d430bafe583448
Threads CPU : 2; Version de l'OS :Windows 6.1; UI Render : par défaut; Moteur de mise en page : nouveau; 
Locale : fr-FR (fr_FR); Calc: CL
Comment 5 Noel Grandin 2017-07-22 12:07:06 UTC
note to self, pretty sure the bug is in lcl_convertTextAlignmentToParaAdjustment() in svx/source/unodraw/unoshap2.cxx
I should be doing
   _rValue <<= (sal_Int16)rEntry.nAPIValue
Comment 6 Xisco Faulí 2017-07-24 22:56:29 UTC
*** Bug 109321 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2017-07-25 20:07:35 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4bab9609b04cb644859cf548bb4739a9d5aa590

tdf#109242 fix save/load of form button alignment

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-07-26 06:31:04 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c694ce3e0b3a6832ed36b3ca683d18d740310bbd&h=libreoffice-5-4

tdf#109242 fix save/load of form button alignment

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Jacques Guilleron 2017-08-03 14:06:04 UTC
*** Bug 110444 has been marked as a duplicate of this bug. ***
Comment 10 Alex Thurgood 2017-08-03 16:15:46 UTC
@Noel : This bug also affects labels in Base form controls (bug 110458) - is that likely to be fixed too by your commit ?
Comment 11 Xisco Faulí 2017-08-03 16:21:35 UTC
*** Bug 110458 has been marked as a duplicate of this bug. ***
Comment 12 Xavier Van Wijmeersch 2017-08-03 18:42:58 UTC
confirm with

Version: 6.0.0.0.alpha0+
Build ID: 3dcf6dfceee58360501396390d78c006351aef47
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 13 Robert Großkopf 2017-08-05 14:20:44 UTC
*** Bug 111395 has been marked as a duplicate of this bug. ***
Comment 14 URxvt 2017-08-06 17:40:45 UTC
Agree with Alex, this bug also affects the text alignment in Base buttons.

Steps to reproduce:
1. Create a form.
2. Insert a button.
3. Save and close the form. Open it again.

The text will always be aligned to the left side.

LibreOffice version 5.4.0 release, checked under Ubuntu 14.04 LTS, Win XP, Win 7 and Arch Linux. It works well in the version 5.3.5.

Just keep in mind it must be fixed in Base, as well. Thanks in advance and keep up the good work.
Comment 15 Noel Grandin 2017-08-06 18:18:30 UTC
Can someone please bisect the form controls issue, and confirm that it comes back to the same commit?
Comment 16 Xisco Faulí 2017-08-06 19:32:37 UTC
(In reply to URxvt from comment #14)
> Agree with Alex, this bug also affects the text alignment in Base buttons.
> 
> Steps to reproduce:
> 1. Create a form.
> 2. Insert a button.
> 3. Save and close the form. Open it again.
> 
> The text will always be aligned to the left side.
> 
> LibreOffice version 5.4.0 release, checked under Ubuntu 14.04 LTS, Win XP,
> Win 7 and Arch Linux. It works well in the version 5.3.5.
> 
> Just keep in mind it must be fixed in Base, as well. Thanks in advance and
> keep up the good work.

I can't reproduce it in

Version: 6.0.0.0.alpha0+
Build ID: 3f16306964d5bb81dda3c681bcabbacadf424e7b
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Could you please try to reproduce it with a master build from http://dev-builds.libreoffice.org/daily/master/ ?
You can install it alongside the standard version.
Comment 17 Robert Großkopf 2017-08-06 20:02:26 UTC
(In reply to Xisco Faulí from comment #16)
> 
> I can't reproduce it in
> 
> Version: 6.0.0.0.alpha0+
> Build ID: 3f16306964d5bb81dda3c681bcabbacadf424e7b
> CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
> Locale: ca-ES (ca_ES.UTF-8); Calc: group
> 
> Could you please try to reproduce it with a master build from
> http://dev-builds.libreoffice.org/daily/master/ ?
> You can install it alongside the standard version.

Problem: There isn't any master available. So normal users can't test it.

Here is something, but I don't know what I should download from this:
http://dev-builds.libreoffice.org/daily/master/Linux-archive-x86_64%4080-updater/current/
Comment 18 Alex Thurgood 2017-08-07 08:30:17 UTC
Confirming that fix works in 


Version: 6.0.0.0.alpha0+
Build ID: 4dd34cd4b829bdc1679b11f19e957313f11620cd
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
Locale: fr-FR (fr_FR.UTF-8); Calc: group
Comment 19 Xavier Van Wijmeersch 2017-08-07 14:47:49 UTC
Robert you can use the daily master from the link you have provided


I confirm its working with daily dev build archive off 20170806

Version: 6.0.0.0.alpha0+
Build ID: 00a87bab22eff26df423001897afc79009593d42
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: kde4; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 20 Luis 2017-08-10 12:59:28 UTC
Fix works in 

Version: 5.4.1.0.0+ (x64)
Build ID: b78c398817940bbbe0b9ebe848a923cef1856758
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:libreoffice-5-4, Time: 2017-07-28_09:02:44
Locale: es-ES (es_ES); Calc: group
Comment 21 Xisco Faulí 2017-08-31 22:23:53 UTC
*** Bug 112154 has been marked as a duplicate of this bug. ***
Comment 22 Lenge 2017-09-02 21:25:02 UTC
With the 5.4.1 release, I can confirm that a "Center" alignment is now correctly saved and restored on loading the document. However, this does NOT work if the alignment is set to "Default":

- Satting the alignment property to "Default" will center the text.
- After saving and re-loading, the alignment is reset to "Left" instead of "Default".

Reopening; could somebody please check if my observation is reproducible?
Comment 23 Xisco Faulí 2017-09-03 17:04:36 UTC
(In reply to Lenge from comment #22)
> With the 5.4.1 release, I can confirm that a "Center" alignment is now
> correctly saved and restored on loading the document. However, this does NOT
> work if the alignment is set to "Default":
> 
> - Satting the alignment property to "Default" will center the text.
> - After saving and re-loading, the alignment is reset to "Left" instead of
> "Default".
> 
> Reopening; could somebody please check if my observation is reproducible?

Although they seem related, I can reproduce the issue you're mentioned back to

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.10; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

thus, it's not a regression introduced by dcffc21805828ddff7de1282f3d40ffdf3fac38d.

Keeping this as closed. Please report a new issue for the 'default' problem.
Thanks
Comment 24 Lenge 2017-09-03 17:23:10 UTC
(In reply to Xisco Faulí from comment #23)
> Please report a new issue for the 'default' problem.
Ok: Bug 112194
Comment 25 Silvain Dupertuis 2017-09-10 16:34:50 UTC
I can confirm that with Version: 5.4.1.2 (Ubuntu - it was recently updated automatically from 5.4.0.3) :
1. Center Alignement is correctly saved and applied (Good)
2. Default Alignement is incorrectly saved as Left (Incorrect)
3. Creating a new Button in Base forms (I suppose it is the same in any kind of document) gives it a Center alignement by default, which is what we generally want (Good!)