tdf#109242 fix save/load of form button alignment

Regression introduced by commit
dcffc21805828ddff7de1282f3d40ffdf3fac38d
"use actual UNO enums in svx"

Change-Id: Ie3bb025fa0ef52d2e746e4556cf29dbd3c3d55a9
Reviewed-on: https://gerrit.libreoffice.org/40416
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit a4bab9609b04cb644859cf548bb4739a9d5aa590)
Reviewed-on: https://gerrit.libreoffice.org/40432